--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 fastmcp==0.2.0
-openai==1.51.2
+openai==1.55.3
 pydantic==2.10.1
 pillow==10.4.0
 python-dotenv==1.0.1
 uvicorn==0.31.1
 aiofiles==24.1.0
+httpx==0.27.2
